--- a/package.json
+++ b/package.json
@@ -18,10 +18,25 @@
   "homepage": "https://github.com/CapitalistHippie/MahjongMayhem#readme",
   "devDependencies": {
     "angular": "^1.5.5",
+    "angular-mocks": "^1.5.5",
+    "browserify": "^13.0.1",
+    "browserify-istanbul": "^2.0.0",
+    "browserify-shim": "^3.8.12",
+    "chai": "^3.5.0",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-http-server": "^1.16.0"
+    "grunt-http-server": "^1.16.0",
+    "grunt-karma": "^1.0.0",
+    "karma": "^0.13.22",
+    "karma-browserify": "^5.0.5",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-sinon": "^1.0.5",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.4"
   }
 }
