--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "mahjong-mayhem",
+  "name": "Mahjong",
   "version": "1.0.0",
-  "description": "MMO Mahjong",
-  "main": "app.js",
+  "description": "",
+  "main": "y",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start karma-config.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CapitalistHippie/MahjongMayhem.git"
+    "url": "y"
   },
-  "author": "Simon van der Meer",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/CapitalistHippie/MahjongMayhem/issues"
-  },
-  "homepage": "https://github.com/CapitalistHippie/MahjongMayhem#readme",
+  "keywords": [
+    "Mahjong"
+  ],
+  "author": "MDaems",
+  "license": "UNLICENSED",
   "devDependencies": {
     "angular": "^1.5.5",
     "angular-mocks": "^1.5.5",
-    "browserify": "^13.0.1",
+    "angular-resource": "^1.5.5",
+    "angular-route": "1.4.x",
+    "angular-ui-router": "^0.2.18",
+    "browserify": "^13.0.0",
     "browserify-istanbul": "^2.0.0",
     "browserify-shim": "^3.8.12",
     "chai": "^3.5.0",
@@ -28,15 +30,16 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-http-server": "^1.16.0",
-    "grunt-karma": "^1.0.0",
+    "grunt-karma": "^0.12.2",
     "karma": "^0.13.22",
-    "karma-browserify": "^5.0.5",
+    "karma-browserify": "^5.0.4",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-sinon": "^1.0.5",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
+    "karma-sinon": "^1.0.4",
     "mocha": "^2.4.5",
-    "sinon": "^1.17.4"
+    "sinon": "^1.17.3",
+    "watchify": "^3.7.0"
   }
 }
