--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-http-server": "^2.0.0",
     "grunt-karma": "^0.12.2",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.4",
